--- a/src/componentes/LoadingComponent.css
+++ b/src/componentes/LoadingComponent.css
@@ -7,6 +7,7 @@
   	border-bottom: 16px solid #3498db; /* Blue */
   	-webkit-animation: spin 2s linear infinite;
   	animation: spin 1s linear infinite;
+    display: inline-block;
 }
 
 @-webkit-keyframes spin {
