--- a/src/componentes/ModalVuttr.css
+++ b/src/componentes/ModalVuttr.css
@@ -15,6 +15,7 @@
     overflow-y: auto;
     animation: show .5s ease;
     -webkit-animation: show .5s ease;
+    text-align: center;
 }
 
 @keyframes show {
@@ -47,8 +48,8 @@
 
 .modal {
 	width: 100%;
-    background-color: #fff;
-    box-shadow: 0 0 0.625rem rgba(0, 0, 0, 0.2);   
+  background-color: #fff;
+  box-shadow: 0 0 0.625rem rgba(0, 0, 0, 0.2);   
 }
 
 @media only screen and (min-width: 576px) {
