--- a/src/componentes/Vuttr.css
+++ b/src/componentes/Vuttr.css
@@ -3,6 +3,11 @@ ul {
 	list-style-type: none;
 }
 
-.App {
-	text-align: center;
+.App { text-align: center; }
+
+@media (max-width: 600px) 
+{
+  .w-50{
+  	width: 100%
+  }
 }
