--- a/src/index.css
+++ b/src/index.css
@@ -1,14 +1,43 @@
 body {
   margin: 0;
   padding: 0;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
-    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
-    sans-serif;
+  font-family: Source Sans Pro, Regular;
+  font-size: 20px;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background: linear-gradient(100deg, #2F55CC 20% , #E1E7FD 100%);
+}
+h1{
+	font-size: 42px;
+	font-family: Source Sans Pro, Semibold;
+}
+h2{
+	font-size: 36px;
+	font-family: Source Sans Pro, Semibold;
+}
+h3{
+	font-size: 30px;
+	font-family: Source Sans Pro, Semibold;
+}
+span{
+	font-family: Source Sans Pro, Regular;
+}
+input{
+	font-family: Source Sans Pro, Regular;
+}
+small{
+	font-size: 18px;
+}
+button{
+	cursor: pointer;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
-    monospace;
-}
+.bg-vermelho { background-color: #F95E5A; }
+.bg-amarelo { background-color: #FFBB43; }
+.bg-verde { background-color: #10B26C;}
+.bg-add { background-color: #30C3FC; }
+.bg-branco-escuro { background-color:#FCFCFD; }
+.ink { color: #170C3A; }
+.azul {color: #365DF0;}
+.azul-escuro {color: #0000BB;}
+.vermelho {color: #CC4C4C;}
