--- a/src/index.css
+++ b/src/index.css
@@ -33,11 +33,21 @@ button{
 }
 
 .bg-vermelho { background-color: #F95E5A; }
+.bg-vermelho:hover { background-color: #CC4C4C; }
 .bg-amarelo { background-color: #FFBB43; }
-.bg-verde { background-color: #10B26C;}
-.bg-add { background-color: #30C3FC; }
+.bg-amarelo:hover { background-color: #D89C3A; }
+.bg-verde { background-color: #0DCB7D;}
+.bg-verde:hover { background-color: #10B26C;}
+.bg-add { background-color: #E1E7FD; }
+.bg-add:hover { background-color: #CAD6FC; }
+.bg-remove { background-color: #FEEFEE }
+.bg-remove:hover { background-color: #FCD7D6; }
 .bg-branco-escuro { background-color:#FCFCFD; }
+.bg-white-verde { background-color: #E7FBF3; }
+.bg-white-verde:hover { background-color: #CFF9E6; }
 .ink { color: #170C3A; }
-.azul {color: #365DF0;}
-.azul-escuro {color: #0000BB;}
-.vermelho {color: #CC4C4C;}
+.verde { color: #0DCB7D }
+.azul { color: #365DF0; }
+.azul-escuro { color: #0000BB; }
+.vermelho { color: #F95E5A; }
+.shadowBox { box-shadow: 0px 20px 25px rgba(0, 0, 0, 0.1); }
